# wgpu_imgui_mandelbrot_example

./: .gitmodules  README.md  license.txt  mandel.wgsl
mandel_glfw/: CMakeLists.txt  main.cpp  main_js_inline.cpp  main_oldStyle.cpp
mandel_imgui_glfw/: CMakeLists.txt  main.cpp  main_js_inline.cpp  main_oldStyle.cpp
mandel_imgui_sdl2/: CMakeLists.txt  main.cpp  main_js_inline.cpp  main_oldStyle.cpp
mandel_sdl2/: CMakeLists.txt  main.cpp  main_js_inline.cpp  main_oldStyle.cpp
